--- a/src/app/components/payments/saved-cards/saved-cards-dialogue.component.html
+++ b/src/app/components/payments/saved-cards/saved-cards-dialogue.component.html
@@ -1,4 +1,4 @@
-<p>saved-cards-dialogue works!</p>
+<!--<p>saved-cards-dialogue works!</p>-->
 <div class="saved-cards-dialog-container">
   <h2 mat-dialog-title>Select a Saved Card</h2>
   <div mat-dialog-content>
