--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<p>dashboard works!</p>
+<!--<p>dashboard works!</p>-->
 
 <div class="col-12 text-center mt-4">
   <button class="btn btn-primary" (click)="downloadPdf()">Download as PDF</button>
