--- a/src/app/components/payments/payments.component.html
+++ b/src/app/components/payments/payments.component.html
@@ -9,207 +9,208 @@
 
 <ng-template #loadedPage>
   <div class="payments-container">
-    <h2>Select the template for your payment.</h2>
-    <div class="template-section-container">
-      <mat-card
-        class="template mat-elevation-z8"
-        *ngFor="let template of templates$ | async"
-        (click)="proceedToPayment(template)"
-      >
-        <mat-card-header>
-          <mat-card-title>{{ template.templateName }}</mat-card-title>
-          <mat-card-subtitle>{{ template.recipientName }}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
-          {{ template.recipientAccountNumber }}
-        </mat-card-content>
-      </mat-card>
+    <div *ngIf="sharedService.isUser">
+      <h2>Select the template for your payment.</h2>
+      <div class="template-section-container">
+        <mat-card
+          class="template mat-elevation-z8"
+          *ngFor="let template of templates$ | async"
+          (click)="proceedToPayment(template)"
+        >
+          <mat-card-header>
+            <mat-card-title>{{ template.templateName }}</mat-card-title>
+            <mat-card-subtitle>{{ template.recipientName }}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            {{ template.recipientAccountNumber }}
+          </mat-card-content>
+        </mat-card>
 
-      <mat-card
-        class="template mat-elevation-z8"
-        (click)="proceedToPayment(null)"
-      >
-        <mat-card-header>
-          <mat-card-title>New Payment</mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="payment-plus-container">
-          <img
-            class="payment-plus"
-            ngSrc="assets/images/plus.svg"
-            alt="New payment"
-            aria-hidden="false"
-            width="30"
-            height="30"
-          />
-        </mat-card-content>
-      </mat-card>
-    </div>
+        <mat-card
+          class="template mat-elevation-z8"
+          (click)="proceedToPayment(null)"
+        >
+          <mat-card-header>
+            <mat-card-title>New Payment</mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="payment-plus-container">
+            <img
+              class="payment-plus"
+              ngSrc="assets/images/plus.svg"
+              alt="New payment"
+              aria-hidden="false"
+              width="30"
+              height="30"
+            />
+          </mat-card-content>
+        </mat-card>
+      </div>
 
-    <div class="payment-container">
-      <mat-card class="mat-elevation-z8" *ngIf="isTemplateSelected">
-        <mat-card-header>
-          <mat-card-title>Proceeding to payment</mat-card-title>
-          <mat-card-subtitle
-          >Please fill all the required fields.
-          </mat-card-subtitle
-          >
-        </mat-card-header>
-        <mat-card-content class="payment-form">
-          <form [formGroup]="paymentForm" (ngSubmit)="onSubmitPayment()">
-            <div class="payment-form-columns">
-              <div class="payment-form-rows">
-                <div>
-                  <mat-form-field
-                    class="payment-form-recipient-details"
-                    appearance="outline"
-                  >
-                    <mat-label>Recipient IBAN</mat-label>
-                    <input
-                      matInput
-                      formControlName="recipientAccountNumber"
-                      required
-                      type="text"
-                    />
-                  </mat-form-field>
-                </div>
-
-                <div>
-                  <mat-form-field
-                    class="payment-form-recipient-details"
-                    appearance="outline"
-                  >
-                    <mat-label>Recipient name</mat-label>
-                    <input
-                      matInput
-                      formControlName="recipientName"
-                      required
-                      type="text"
-                    />
-                  </mat-form-field>
-                </div>
-
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Bill Number</mat-label>
-                    <input
-                      matInput
-                      formControlName="billNumber"
-                      required
-                      type="text"
-                    />
-                  </mat-form-field>
-
-                  <mat-form-field
-                    class="payment-form-amount"
-                    appearance="outline"
-                  >
-                    <mat-label>Amount (RON)</mat-label>
-                    <input
-                      matInput
-                      formControlName="amount"
-                      required
-                      mask="separator.0"
-                      thousandSeparator=" "
-                    />
-                  </mat-form-field>
-                </div>
-
-                <div class="payment-form-description">
-                  <mat-form-field appearance="outline">
-                    <mat-label>Description (Optional)</mat-label>
-                    <textarea
-                      matInput
-                      formControlName="description"
-                      type="text"
-                    ></textarea>
-                  </mat-form-field>
-                </div>
-              </div>
-
-              <div class="payment-form-rows">
-                <div class="payment-form-card-number-name">
-                  <mat-form-field appearance="outline">
-                    <mat-label>Card Number</mat-label>
-                    <input
-                      matInput
-                      formControlName="cardNumber"
-                      required
-                      mask="0000 0000 0000 0000"
-                      placeholder="0000 0000 0000 0000"
-                      (click)="openSavedCardsDialog()"
-                      (focusin)="isCardNumberSelected = true"
-                      (focusout)="isCardNumberSelected = false"
-                    />
-                  </mat-form-field>
-                </div>
-
-                <div class="payment-form-card-number-name">
-                  <mat-form-field appearance="outline">
-                    <mat-label>Cardholder Name</mat-label>
-                    <input
-                      matInput
-                      formControlName="ownerName"
-                      required
-                      type="text"
-                      (focusin)="isCardNameSelected = true"
-                      (focusout)="isCardNameSelected = false"
-                    />
-                  </mat-form-field>
-                </div>
-
-                <div class="payment-form-expiration-cvv">
-                  <mat-form-field appearance="outline">
-                    <mat-label>Expiration Date</mat-label>
-                    <input
-                      matInput
-                      formControlName="expiration"
-                      required
-                      mask="00/00"
-                      placeholder="__/__"
-                      (focusin)="isCardExpSelected = true"
-                      (focusout)="isCardExpSelected = false"
-                    />
-                  </mat-form-field>
-
-                  <mat-form-field appearance="outline">
-                    <mat-label>CVV</mat-label>
-                    <input
-                      matInput
-                      formControlName="cvv"
-                      required
-                      mask="000"
-                      placeholder="000"
-                      (focusin)="isCardCvvSelected = true"
-                      (focusout)="isCardCvvSelected = false"
-                    />
-                  </mat-form-field>
-                </div>
-              </div>
-
-              <div>
-                <img
-                  class="payment-form-card"
-                  src="{{ getCardImgPath() }}"
-                  alt="New payment"
-                  aria-hidden="false"
-                />
-              </div>
-            </div>
-
-            <button
-              class="submit"
-              mat-raised-button
-              type="submit"
-              color="primary"
-              [disabled]="paymentForm.invalid"
+      <div class="payment-container">
+        <mat-card class="mat-elevation-z8" *ngIf="isTemplateSelected">
+          <mat-card-header>
+            <mat-card-title>Proceeding to payment</mat-card-title>
+            <mat-card-subtitle
+            >Please fill all the required fields.
+            </mat-card-subtitle
             >
-              Pay
-            </button>
-          </form>
-        </mat-card-content>
-      </mat-card>
-    </div>
+          </mat-card-header>
+          <mat-card-content class="payment-form">
+            <form [formGroup]="paymentForm" (ngSubmit)="onSubmitPayment()">
+              <div class="payment-form-columns">
+                <div class="payment-form-rows">
+                  <div>
+                    <mat-form-field
+                      class="payment-form-recipient-details"
+                      appearance="outline"
+                    >
+                      <mat-label>Recipient IBAN</mat-label>
+                      <input
+                        matInput
+                        formControlName="recipientAccountNumber"
+                        required
+                        type="text"
+                      />
+                    </mat-form-field>
+                  </div>
 
+                  <div>
+                    <mat-form-field
+                      class="payment-form-recipient-details"
+                      appearance="outline"
+                    >
+                      <mat-label>Recipient name</mat-label>
+                      <input
+                        matInput
+                        formControlName="recipientName"
+                        required
+                        type="text"
+                      />
+                    </mat-form-field>
+                  </div>
+
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Bill Number</mat-label>
+                      <input
+                        matInput
+                        formControlName="billNumber"
+                        required
+                        type="text"
+                      />
+                    </mat-form-field>
+
+                    <mat-form-field
+                      class="payment-form-amount"
+                      appearance="outline"
+                    >
+                      <mat-label>Amount (RON)</mat-label>
+                      <input
+                        matInput
+                        formControlName="amount"
+                        required
+                        mask="separator.0"
+                        thousandSeparator=" "
+                      />
+                    </mat-form-field>
+                  </div>
+
+                  <div class="payment-form-description">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Description (Optional)</mat-label>
+                      <textarea
+                        matInput
+                        formControlName="description"
+                        type="text"
+                      ></textarea>
+                    </mat-form-field>
+                  </div>
+                </div>
+
+                <div class="payment-form-rows">
+                  <div class="payment-form-card-number-name">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Card Number</mat-label>
+                      <input
+                        matInput
+                        formControlName="cardNumber"
+                        required
+                        mask="0000 0000 0000 0000"
+                        placeholder="0000 0000 0000 0000"
+                        (click)="openSavedCardsDialog()"
+                        (focusin)="isCardNumberSelected = true"
+                        (focusout)="isCardNumberSelected = false"
+                      />
+                    </mat-form-field>
+                  </div>
+
+                  <div class="payment-form-card-number-name">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Cardholder Name</mat-label>
+                      <input
+                        matInput
+                        formControlName="ownerName"
+                        required
+                        type="text"
+                        (focusin)="isCardNameSelected = true"
+                        (focusout)="isCardNameSelected = false"
+                      />
+                    </mat-form-field>
+                  </div>
+
+                  <div class="payment-form-expiration-cvv">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Expiration Date</mat-label>
+                      <input
+                        matInput
+                        formControlName="expiration"
+                        required
+                        mask="00/00"
+                        placeholder="__/__"
+                        (focusin)="isCardExpSelected = true"
+                        (focusout)="isCardExpSelected = false"
+                      />
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline">
+                      <mat-label>CVV</mat-label>
+                      <input
+                        matInput
+                        formControlName="cvv"
+                        required
+                        mask="000"
+                        placeholder="000"
+                        (focusin)="isCardCvvSelected = true"
+                        (focusout)="isCardCvvSelected = false"
+                      />
+                    </mat-form-field>
+                  </div>
+                </div>
+
+                <div>
+                  <img
+                    class="payment-form-card"
+                    src="{{ getCardImgPath() }}"
+                    alt="New payment"
+                    aria-hidden="false"
+                  />
+                </div>
+              </div>
+
+              <button
+                class="submit"
+                mat-raised-button
+                type="submit"
+                color="primary"
+                [disabled]="paymentForm.invalid"
+              >
+                Pay
+              </button>
+            </form>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
     <div class="payments-table-container">
       <h2>Transactions</h2>
       <table
