--- a/src/app/components/payments/save-template/save-payment-dialog.component.html
+++ b/src/app/components/payments/save-template/save-payment-dialog.component.html
@@ -1,4 +1,4 @@
-<p>save-payment-dialogue works!</p>
+<!--<p>save-payment-dialogue works!</p>-->
 <h2 mat-dialog-title>Save Payment Template</h2>
 <div mat-dialog-content>
   <h3>Would you like to save these payment details as a template?</h3>
