--- a/src/app/components/welcome-page/welcome-page.component.html
+++ b/src/app/components/welcome-page/welcome-page.component.html
@@ -1,4 +1,4 @@
-<p>welcome-page works!</p>
+<!--<p>welcome-page works!</p>-->
 
 <div class="welcome-page-body">
   <button class="welcome-page-body-button"
